# MailAccess

./: .env.example  .gitignore  CONTRIBUTING.md  DISCLAIMER.md  ENHANCEMENT_RECOMMENDATIONS.md  Makefile  README.md  SECURITY.md  debug.json  debug_alt.json  docker-compose.prod.yml  docker-compose.yml  extract.py  extracted.txt  john_doe_out.txt  katriel_out.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_module.md
backend/: Dockerfile  config.py  main.py
backend/api/: queue_registry.py  router.py  websocket.py
backend/core/: __init__.py  _phase_runner.py  aggregator.py  avatar_hasher.py  bing_dorker.py  bio_analyzer.py  bio_link_extractor.py  bio_similarity.py  blackbird_detector.py  blackbird_loader.py  breach_corpus.py  breach_normalizer.py  ca_email_extraction.py  cc_index_client.py  cc_page_fetcher.py  common_names.py  company_page_names.py  credential_risk.py  dataset_curator.py  defenders_brief.py  demotion_log.py  disposable_domains.py  domain_harvest_orchestrator.py  domain_harvest_report.py  dork_queries.py  duckduckgo_dorker.py  email_confidence.py  email_credibility.py  email_extraction.py  email_pattern_generator.py  engine.py  github_email_search.py  harvester_collectors.py  harvester_loader.py  http_client.py  identity_graph.py  intelx_client.py  linkedin_name_discovery.py  maigret_detector.py  maigret_loader.py  (+25 more)
backend/db/: __init__.py  database.py  models.py
backend/exporters/: __init__.py  base.py  csv_exporter.py  json_exporter.py  maltego_exporter.py  markdown_exporter.py  pdf_exporter.py  stix_exporter.py
backend/integrations/: integration_webhook.py  maltego_transform.py  webhooks.py
backend/modules/: __init__.py  account_discovery.py  alternate_email.py  base.py  blackbird_platforms.py  emailrep.py  (+60 more)
cli/: harvest_emails.py  main.py  platform_audit.py  platform_health.py
data/: disposable_domains.json  reset_signals.json  service_categories.yaml  sherlock_sites.json
docker/: Dockerfile.backend  Dockerfile.frontend
docs/: api.md  architecture.md  enhancement-roadmap.md  exports.md  fp-control.md  ghunt-setup.md  harvest-emails.md  integrations.md  modules.md  self-hosting.md  solutions_kt.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
research/: gemini-3.1pro.md  gpt-5.5.md  opus.md
scripts/: replace_transport.py
tests/: test_aggregator.py  test_avatar_clusters.py  test_avatar_hasher.py  test_bio_clusters.py  test_bio_similarity.py  test_breach_corpus.py  test_breach_deep.py  test_disposable_domains.py  test_identity_graph.py  test_maigret_platforms.py  test_name_consensus.py  test_proxy.py  test_rate_limiter.py  test_reset_prober.py  test_sherlock_detector.py  test_sherlock_platforms.py  test_timeline.py
(+43 files in other folders)
