[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailaccess"
version = "0.1.0"
description = "Open-source OSINT email intelligence tool"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "dnspython>=2.6",
    "python-whois>=0.9",
    "typer[all]>=0.12",
    "rich>=13",
    "weasyprint>=62",
    "stix2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
mailaccess = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["backend", "cli"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
