[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailaccess"
version = "0.3.1"
description = "Open-source OSINT email intelligence tool"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Katriel Moses" }]
keywords = ["osint", "email", "security", "intelligence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "dnspython>=2.6",
    "python-whois>=0.9",
    "typer[all]>=0.25.1",
    "rich>=13",
    "weasyprint>=62",
    "stix2>=3.0",
    "holehe>=1.61",
    "user-scanner>=1.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/mailaccess"
Documentation = "https://github.com/YOUR_USERNAME/mailaccess/docs"
Issues = "https://github.com/YOUR_USERNAME/mailaccess/issues"

[project.optional-dependencies]
ghunt = [
    "ghunt>=2.3",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
mailaccess = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["backend", "cli"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
